tests/ui/coercion/vtable-unsatisfied-supertrait.stderr
error[E0277]: the trait bound `(): Supertrait` is not satisfied
  --> $DIR/vtable-unsatisfied-supertrait.rs:13:16
   |
LL | impl Trait for () {}
   |                ^^ the trait `Supertrait` is not implemented for `()`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/vtable-unsatisfied-supertrait.rs:7:1
   |
LL | trait Supertrait {
   | ^^^^^^^^^^^^^^^^
note: required by a bound in `Trait`
  --> $DIR/vtable-unsatisfied-supertrait.rs:11:14
   |
LL | trait Trait: Supertrait {}
   |              ^^^^^^^^^^ required by this bound in `Trait`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
